No more "new Integer"