@@ -9,19 +9,19 @@ import httpserver.itf.HttpRicmletRequest;
 import httpserver.itf.HttpRicmletResponse;
 import httpserver.itf.HttpSession;
 
-public class CountBySessionRicmlet implements httpserver.itf.HttpRicmlet{
-	HashMap<String,Integer> counts = new HashMap<String,Integer>();
-	
+public class CountBySessionRicmlet implements httpserver.itf.HttpRicmlet {
+	HashMap<String, Integer> counts = new HashMap<String, Integer>();
+
 	/*
 	 * Print the number of time this ricmlet has been invoked per user session
 	 */
 	@Override
-	public void doGet(HttpRicmletRequest req,  HttpRicmletResponse resp) throws IOException {
+	public void doGet(HttpRicmletRequest req, HttpRicmletResponse resp) throws IOException {
 		HttpSession s = req.getSession();
 		Integer c = (Integer) s.getValue("counter");
 		if (c == null)
-			s.setValue("counter", new Integer(0));
-		else s.setValue("counter", new Integer(c.intValue()+1));
+			s.setValue("counter", Integer.valueOf(0));
+		else s.setValue("counter", Integer.valueOf(c.intValue() + 1));
 		resp.setReplyOk();
 		resp.setContentType("text/html");
 		PrintStream ps = resp.beginBody();
@@ -29,6 +29,6 @@ public class CountBySessionRicmlet implements httpserver.itf.HttpRicmlet{
 		ps.print("<BODY><H4> Hello for the " + s.getValue("counter") + " times !!!");
 		ps.println("</H4></BODY></HTML>");
 		ps.println();
-}
+	}
 
 }
